fixed the bug related to text-wrapping on reminder page: Neetu/Akshay

--- a/media/css/scss/reminder.scss
+++ b/media/css/scss/reminder.scss
@@ -7,6 +7,8 @@
     border-bottom: 1px solid;
 }
 #review_section{
+ width:480px !important;
+
  h4{
     border-bottom:1px solid #CCCCCC;
  }
